20050901:
	- Update kernel patch
20050830:
	- Added argument parsing
	- Added action mask set up
20050829:
	- Improved error handling
	- Remove _dat files, include the payload in _out
	- Support for payload > 64 bytes
	- Add install target
	- Fix RELAYFS Kconfig selection (kernel patch)
	- blktrace: Don't touch the stored trace, leave magic and version
	  for blkparse to see as well.
	- Always store trace data in big endian format
	- Oops, don't clear rb_root in sort_entries()
	- Account dispathces as well, split stats into per-cpu
	- blktrace: fix payload logging
20050827:
	- Various cleanups and killing unused variables
20050826:
	- Committed initial version
	- Misc fixes
	- Bug with pdu_len in blkparse.c, rewrote to index in rbtree and
	  ditch usage of qsort()